mission mobile footer fixes

--- a/footer.css
+++ b/footer.css
@@ -6,7 +6,6 @@ footer {
   align-items: center;
   font-size: 0.95rem;
   color: black;
-  position: relative;
   z-index: 1;
 }
 
