--- a/mission.css
+++ b/mission.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
 
 .mission {
+  flex: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem 10%;
-  gap: 3rem;
   flex-wrap: wrap;
   position: relative;
-  margin-top:-10rem;
-  max-height: 70vh;
+  padding: 4rem 8%;
+  gap: 2rem;
+  margin-top: -6rem;
+  min-height: calc(100vh - var(--footer-height));
+  box-sizing: border-box;
 }
 
 .mission-container {
@@ -29,6 +31,7 @@
   line-height: 1.3;
   color: #10824c;
   position: relative;
+
   display: inline-block;
 }
 
